--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "vee-validate": "^4.11.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
